[workspace]

members = [
    "_01_hello_cargo",
    "_02_gussing_game",
    "_03_variables",
    "_04_ownerShip",
    "_05_struct",
    "_06_enum",
    "_07_package",
    "_08_collection",
    "_10_trait",
    "_11_unittest",
    "_12_miniGrep",
    "_17_ObjectOrinted",
    "_20_rust_server",
    "stdCommand",
    "rustDemo",
    "dialoguer",

]