[package]
name = "rustDemo"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
 _01_hello_cargo= { path = "../_01_hello_cargo"}
_02_gussing_game= { path = "../_02_gussing_game"}
_03_variables= { path = "../_03_variables"}
_04_ownerShip= { path = "../_04_ownerShip"}
_05_struct= { path = "../_05_struct"}
_06_enum= { path = "../_06_enum"}
_07_package= { path = "../_07_package"}
_12_miniGrep= { path = "../_12_miniGrep"}
_17_ObjectOrinted= { path = "../_17_ObjectOrinted"}
_20_rust_server= { path = "../_20_rust_server"}
stdCommand= { path = "../stdCommand"}
